# bradax

./: .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE_MEMORY.md  BACKLOG.md  CHANGELOG.md  GUIAS_USO_CORPORATIVO.md  README.md  gerar_auditoria.py  pytest.ini  replace-secret.txt  sdk_real_tests.py  test_guardrail_events.py  test_sdk_puro.py  test_sdk_simples.py  test_single_request.py
.github/: copilot-instructions.md
bradax-broker/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  run_broker.py  run_server.py  run_tests.py  server.err
bradax-broker/src/: __init__.py
bradax-broker/src/broker/: config.py  config_new.py  constants.py  log_schema.py  logging_config.py  main.py  structured_logger.py
bradax-broker/src/broker/api/: __init__.py
bradax-broker/src/broker/api/routes/: __init__.py  auth.py  graph.py  health.py  llm.py  metrics.py  projects.py  system.py  vector.py
bradax-broker/src/broker/auth/: __init__.py  project_auth.py  project_auth_new.py  project_storage.py
bradax-broker/src/broker/controllers/: __init__.py  llm_controller.py  project_controller.py  system_controller.py
bradax-broker/src/broker/exceptions/: __init__.py
bradax-broker/src/broker/middleware/: __init__.py  auth.py  cors.py  logging.py  rate_limiting.py  security.py  telemetry_validation.py
bradax-broker/src/broker/registry/: llm_registry.py
bradax-broker/src/broker/schemas/: __init__.py
bradax-broker/src/broker/services/: __init__.py  guardrails.py  interactions.py  openai_service.py  telemetry.py  telemetry_raw.py
bradax-broker/src/broker/services/llm/: __init__.py  config.py  interfaces.py  providers.py  registry.py  service.py
bradax-broker/src/broker/storage/: __init__.py  factory.py  interfaces.py  json_storage.py  repositories.py  unified_cache.py
bradax-broker/src/broker/utils/: __init__.py  paths.py
bradax-broker/tests/: ANALISE_PLANO_TESTES.md  README.md  __init__.py  conftest.py  test_broker_config.py  test_broker_constants.py  test_model_consistency_results.json  test_openai_service.py
bradax-broker/tests/end_to_end/: test_code_deduplication_coverage_real.py  test_code_quality_coverage_real.py  test_code_quality_functional_real.py  test_code_quality_regression_real.py  test_code_quality_structural_real.py  test_complete_system.py  test_jwt_authentication_e2e_real.py  test_output_guardrails_e2e.py  test_performance_optimization_e2e_real.py  test_performance_regression_real.py  test_sdk_integration.py  test_telemetry_e2e_flow.py  test_telemetry_e2e_real.py  test_telemetry_e2e_real_fixed.py  test_telemetry_integration_e2e.py  test_telemetry_integration_http_real.py  test_telemetry_sdk_broker_e2e_real.py
bradax-broker/tests/failover/: test_failover_behavior_real.py
bradax-broker/tests/integration/: test_cache_functionality_real.py  test_code_deduplication_functional_real.py  test_code_deduplication_regression_real.py  test_custom_guardrails_e2e.py  test_guardrails_output_telemetry.py  test_guardrails_protection_real.py  test_guardrails_real.py  test_guardrails_telemetry.py  test_integrated_flow_real.py  test_jwt_security_integration_real.py  test_langchain_real.py  test_telemetry_raw_flow.py  test_telemetry_real.py
bradax-broker/tests/regression/: test_http_403_prevention_real.py
bradax-broker/tests/stress/: test_stress_concurrency_real.py
bradax-broker/tests/unit/: test_code_deduplication_structural_real.py  test_endpoints.py  test_hub_security_constants_real.py  test_jwt_security_fallback_removal_real.py  test_performance_optimization_real.py  test_telemetry_interceptor_real.py
bradax-sdk/: .env.example  MIGRATION_GUIDE.md  README.md  pyproject.toml
bradax-sdk/examples/: corporate-examples.py  quick-test.py
bradax-sdk/src/bradax/: __init__.py  client.py  constants.py  corporate_client_new.py  logging_config.py  telemetry_interceptor.py
bradax-sdk/src/bradax/client/: __init__.py  corporate_client.py  project_client.py
bradax-sdk/src/bradax/config/: __init__.py  sdk_config.py  sdk_config_new.py
bradax-sdk/src/bradax/exceptions/: __init__.py  bradax_exceptions.py
bradax-sdk/tests/: __init__.py  test_invoke_auditoria_real.py  test_sdk_config.py  test_sdk_constants.py  test_sdk_real.py  test_sdk_restrictions.py  test_sdk_simple_real_project.py
bradax-sdk/tests/e2e/: test_sdk_broker_e2e.py
bradax-sdk/tests/end_to_end/: test_e2e_sdk_broker.py
bradax-sdk/tests/integration/: test_telemetry_headers_http_real.py
bradax-sdk/tests/unit/: test_telemetry_interceptor_real.py  test_telemetry_regression_http403_real.py
data/: guardrails.json  llm_models.json  projects.json
docs/: arquitetura.md  faq_arquitetural.md  invoke-generico.md  narrativa_valor.md
scripts/: audit_integrity_check.py  real_sdk_invoke.py  (+5 more)
(+55 files in other folders)
