[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bradax-broker"
version = "0.1.0"
description = "Servidor de execução para runtime de IA generativa - Bradesco Seguros"
authors = [
    {name = "Jonathan Pereira", email = "jonathan.pereira@seguros.bradesco.com.br"}
]
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cryptography>=41.0.0",
    "pyjwt[crypto]>=2.8.0",
    "openai>=1.3.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "docker>=6.1.0",
]

[project.urls]
Homepage = "https://docs.seguros.bradesco.com.br/bradax"
Repository = "https://github.com/jowpereira/bradax"
Documentation = "https://docs.seguros.bradesco.com.br/bradax/broker"

[project.scripts]
bradax-broker = "broker.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
broker = ["py.typed", "*.pyi"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101", "S603", "S607", "PLR0913", "PLR0912", "PLR0915"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=broker --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
